src/test/ui/resolve/typo-suggestion-for-variable-with-name-similar-to-struct-field.stderr
error[E0425]: cannot find value `config` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:7:16
   |
LL |         Self { config }
   |                ^^^^^^
   |                |
   |                a field by this name exists in `Self`
   |                help: a local variable with a similar name exists: `cofig`

error[E0425]: cannot find value `config` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:11:20
   |
LL |         println!("{config}");
   |                    ^^^^^^
   |                    |
   |                    a field by this name exists in `Self`
   |                    help: a local variable with a similar name exists: `cofig`

error[E0425]: cannot find value `config` in this scope
  --> $DIR/typo-suggestion-for-variable-with-name-similar-to-struct-field.rs:15:20
   |
LL |         println!("{config}");
   |                    ^^^^^^
   |
help: you might have meant to use the available field
   |
LL |         println!("{self.config}");
   |                    ~~~~~~~~~~~
help: a local variable with a similar name exists
   |
LL |         println!("{cofig}");
   |                    ~~~~~

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
